--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- favicon -->
-    <link rel="icon" href="">
+    <link rel="icon" href="img/favicon.ico">
 
     <!-- meta/seo -->
     <meta name="geo.region" content="DK-82">
@@ -32,7 +32,12 @@
 
     <!-- main start -->
     <main>
-
+        <h2>Velkommen</h2>
+        <p>Oplev autentisk japansk smag. <br> Vores måltidskasser gør det let!</p>
+<section>
+    <h1>Vores måltidskasser</h2>
+        <img src="img/ramen_1.webp" alt="">
+</section>
     </main>
     <!-- main slut -->
 
