--- a/index.html
+++ b/index.html
@@ -34,9 +34,49 @@
     <main>
         <h2>Velkommen</h2>
         <p>Oplev autentisk japansk smag. <br> Vores måltidskasser gør det let!</p>
-<section>
-    <h1>Vores måltidskasser</h2>
-        <img src="img/ramen_1.webp" alt="">
+<section class="solid">
+    <h1>Vores måltidskasser</h1>
+    <div class="kasse">
+        <img src="img/ramen_1.webp" alt="Shoyu ramen">
+        <h3>Kiso kassen</h3>
+        <p>Japanske retter med kød.</p>
+    </div>
+    <div class="kasse">
+        <img src="img/dumpling_1.webp" alt="Dumplings med rejer">
+        <h3>Umi kassen</h3>
+        <p>Japanske retter med fisk.</p>
+    </div>
+    <div class="kasse">
+        <img src="img/okonomiyaki.webp" alt="Okonomiyaki">
+        <h3>Yasai kassen</h3>
+        <p>Japanske vegetariske retter.</p>
+    </div>
+    <button class="bestil">
+        Bestil her
+    </button>
+</section>
+<section class="nobg">
+    <h2>Vidste du at...</h2>
+    <p>Washoku er det japanske ord for japansk mad, og Washoku handler om meget mere end bare mad. Det indebærer også balance, harmoni, præsentation, teknikker og det ceremoniele aspekt.</p>
+</section>
+<section class="kant">
+    <h2>Sådan fungerer det</h2>
+    <img src="img/nudel.webp" alt="">
+    <img src="img/pc.webp" alt="">
+    <img src="img/dor.webp" alt="">
+    <img src="img/mad.webp" alt="">
+</section>
+<button>
+    Tilmeld dig
+</button>
+<section class="solid">
+<h2>FAQ</h2>
+<p>Her ser du vores oftest stillede spørgsmål. Fandt du ikke det du ledte efter, så læs mere her.</p>
+<div>
+    <p>Hvordan sorterer jeg emballagen?</p>
+    <p>Hvordan ændre jeg min måltidskasse?</p>
+    <p>Hvordan fungerer levering?</p>
+</div>
 </section>
     </main>
     <!-- main slut -->
