--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- favicon -->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/ikoner/favicon.ico">
 
     <!-- meta/seo -->
     <meta name="geo.region" content="DK-82">
@@ -37,17 +37,17 @@
 <section class="solid">
     <h1>Vores måltidskasser</h1>
     <div class="kasse">
-        <img src="img/ramen_1.webp" alt="Shoyu ramen">
+        <img src="img/kasser/ramen_1.webp" alt="Shoyu ramen">
         <h3>Kiso kassen</h3>
         <p>Japanske retter med kød.</p>
     </div>
     <div class="kasse">
-        <img src="img/dumpling_1.webp" alt="Dumplings med rejer">
+        <img src="img/kasser/dumpling_1.webp" alt="Dumplings med rejer">
         <h3>Umi kassen</h3>
         <p>Japanske retter med fisk.</p>
     </div>
     <div class="kasse">
-        <img src="img/okonomiyaki.webp" alt="Okonomiyaki">
+        <img src="img/kasser/okonomiyaki.webp" alt="Okonomiyaki">
         <h3>Yasai kassen</h3>
         <p>Japanske vegetariske retter.</p>
     </div>
@@ -61,10 +61,10 @@
 </section>
 <section class="kant">
     <h2>Sådan fungerer det</h2>
-    <img src="img/nudel.webp" alt="">
-    <img src="img/pc.webp" alt="">
-    <img src="img/dor.webp" alt="">
-    <img src="img/mad.webp" alt="">
+    <img src="img/infographic/nudel.webp" alt="">
+    <img src="img/infographic/pc.webp" alt="">
+    <img src="img/infographic/dor.webp" alt="">
+    <img src="img/infographic/mad.webp" alt="">
 </section>
 <button>
     Tilmeld dig
