--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- favicon -->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/ikoner/favicon.ico">
 
     <!-- meta/seo -->
     <meta name="geo.region" content="DK-82">
