font update + footer

--- a/ups.html
+++ b/ups.html
@@ -34,13 +34,30 @@
     <main>
 
 
+        <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
     </main>
     <!-- main slut -->
 
 
     <!-- footer start -->
     <footer>
+            <div id="footer-left">
+                <h2>Kundeservice</h2>
+                <a href="tel:+4537824691">+45 37 82 46 91</a>
+                <a href="mailto:nippon-info@gmail.com">Nippon-info@gmail.com</a>
+            </div>
 
+            <div id="footer-social">
+                <a href="#"><img src="img/ikoner/facebook.webp" alt="facebook icon"></a>
+                <a href="#"><img src="img/ikoner/instagram.webp" alt="facebook icon"></a>
+                <a href="#"><img src="img/ikoner/pinterest.webp" alt="pinterest icon"></img></a>
+            </div>
+
+            <div id="footer-right">
+                <a href="tilmeld-dig.html">Tilmeld</a>
+                <a href="#">Cookies</a>
+                <a href="#">Vilkår og Betingelser</a>
+            </div>
     </footer>
     <!-- footer slut -->
     <script src="js/script.js"></script>
