--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -42,7 +42,7 @@
                 <button onclick="dropdown2()" class="dropbtn drop2">Om Nippon</button>
                 <div id="myDropdown2" class="dropdown-content content2">
                     <a href="sadan-fungerer-det.html">Sådan fungere det</a>
-                    <a href="faq.html">FAG</a>
+                    <a href="faq.html">FAQ</a>
                     <a href="#">Bæredygtighed</a>
                     <a href="#">Anmeldelser</a>
                 </div>
