--- a/faq.html
+++ b/faq.html
@@ -77,8 +77,10 @@
     <!-- main start -->
     <main>
 
+        <h1>FAQ</h1>
 
-        <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
+
+
     </main>
     <!-- main slut -->
 
