Start på sådan fungerer det siden

--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -77,8 +77,16 @@
     <!-- main start -->
     <main>
 
+        <h1 class="undersideh1">Sådan fungerer det</h1>
 
-        <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
+        <section class="infographic">
+                <img class="nudel-billede" src="img/infographic/nudel.webp" alt="tegning af nudler og en spisepind">
+
+        </section>
+        
+
+
+       
     </main>
     <!-- main slut -->
 
