--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -41,8 +41,8 @@
             <div class="dropdown">
                 <button onclick="dropdown2()" class="dropbtn drop2">Om Nippon</button>
                 <div id="myDropdown2" class="dropdown-content content2">
-                    <a href="sadan-fungerer-det.html">Sådan fungere det</a>
-                    <a href="faq.html">FAG</a>
+                    <a href="sadan-fungerer-det.html">Sådan fungerer det</a>
+                    <a href="faq.html">FAQ</a>
                     <a href="#">Bæredygtighed</a>
                     <a href="#">Anmeldelser</a>
                 </div>
@@ -62,12 +62,13 @@
         <div class="knapper">
             <button id="login">Log ind</button>
             <div id="nav-hjerte">
-                <img class="red" src="img/ikoner/facebook.webp" alt="Farvoritter">
-                <img class="blue" src="img/ikoner/instagram.webp" alt="Farvoritter">
+                <img class="red" src="img/ikoner/hjerte-tomt.png" alt="Farvoritter">
+                <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
+            
             <div id="nav-kurv">
-                <img class="red" src="img/ikoner/facebook.webp" alt="Farvoritter">
-                <img class="blue" src="img/ikoner/instagram.webp" alt="Farvoritter">
+                <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
+                <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
             </div>
         </div>
 
