--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2>Velkommen</h2>
         <p>Oplev autentisk japansk smag. <br> Vores måltidskasser gør det let!</p>
         <section class="solid">
-            <h1>Vores måltidskasser</h1>
+            <h1 class="h1f">Vores måltidskasser</h1>
             <div class="kasse">
                 <img src="img/kasser/ramen_1.webp" alt="Shoyu ramen">
                 <h3>Kiso kassen</h3>
