--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -81,7 +81,7 @@
         <h1 class="undersideh1">Sådan fungerer det</h1>
 
         <section class="infographic">
-                <img class="nudel-billede" src="img/infographic/nudel.webp" alt="tegning af nudler og en spisepind">
+                <img class="spisepinde" src="img/infographic/spisepinde.webp" alt="tegning af nudler og en spisepind">
 
         </section>
         
