--- a/din-kurv.html
+++ b/din-kurv.html
@@ -66,10 +66,9 @@
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
             
-            <div id="nav-kurv">
-                <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
-                <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
-            </div>
+            <a href="din-kurv.html" id="nav-kurv">
+                <img src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
+            </a>
         </div>
 
     </header>
