--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
             
-            <div id="nav-kurv">
+            <a href="din-kurv.html" id="nav-kurv">
                 <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
                 <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
-            </div>
+            </a>
         </div>
 
     </header>
