--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -49,7 +49,7 @@
             </div>
     
             <div class="dropdown">
-                <button onclick="dropdown3()" class="dropbtn drop3">Din Konto</button>
+                <button onclick="dropdown3()" class="dropbtn drop3 avtive">Din Konto</button>
                 <div id="myDropdown3" class="dropdown-content content3">
                     <a href="#">Min måltidskasse</a>
                     <a href="#">Mine favoritter</a>
@@ -66,10 +66,10 @@
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
             
-            <div id="nav-kurv">
+            <a href="din-kurv.html" id="nav-kurv">
                 <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
                 <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
-            </div>
+            </a>
         </div>
 
     </header>
@@ -79,7 +79,6 @@
     <main>
 
 
-        <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
     </main>
     <!-- main slut -->
 
