--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -39,7 +39,7 @@
             </div>
     
             <div class="dropdown">
-                <button onclick="dropdown2()" class="dropbtn drop2">Om Nippon</button>
+                <button onclick="dropdown2()" class="dropbtn drop2 active">Om Nippon</button>
                 <div id="myDropdown2" class="dropdown-content content2">
                     <a href="sadan-fungerer-det.html">Sådan fungerer det</a>
                     <a href="faq.html">FAQ</a>
@@ -66,13 +66,13 @@
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
             
-            <div id="nav-kurv">
+            <a href="din-kurv.html" id="nav-kurv">
                 <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
                 <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
-            </div>
+            </a>
         </div>
 
-    </header>s
+    </header>
 
 
     <!-- main start -->
