--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -29,7 +29,7 @@
         <!-- navigationsbar start -->
         <nav>
             <div class="dropdown">
-                <button onclick="dropdown1()" class="dropbtn drop1">Måltidskasser</button>
+                <button onclick="dropdown1()" class="dropbtn drop1 active">Måltidskasser</button>
                 <div id="myDropdown1" class="dropdown-content content1">
                     <a href="yasai-kassen.html">Yasai<br>(Vegetar-kassen)</a>
                     <a href="#">Kiso<br>(Basis-kassen)</a>
@@ -66,10 +66,10 @@
                 <img class="blue" src="img/ikoner/hjerte-bla.webp" alt="Farvoritter">
             </div>
             
-            <div id="nav-kurv">
+            <a href="din-kurv.html" id="nav-kurv">
                 <img class="red" src="img/ikoner/kurv.webp" alt="Farvoritter">
                 <img class="blue" src="img/ikoner/kurv-bla.webp" alt="Farvoritter">
-            </div>
+            </a>
         </div>
 
     </header>
