--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-    </header>s
+    </header>
 
 
     <!-- main start -->
@@ -82,6 +82,46 @@
 
         <section class="infographic">
                 <img class="spisepinde" src="img/infographic/spisepinde.webp" alt="tegning af nudler og en spisepind">
+
+                <section class="besog-nippon">
+                    <img class="computer" src="img/infographic/pc.webp" alt="billede af computer der er inde på Nippon">
+                    <p>Besøg Nippon.dk</p>
+                </section>
+
+                <section class="vaelg-maaltidskasse">
+                    <img class="retter" src="img/infographic/retter.webp" alt="billede af forskellige retter, som man kan vælge på Nippon">
+                    <p>Vælg måltidskasse</p>
+                    <p>-</p>
+                    <p>Tilpas din menu!</p>
+                </section>
+
+                <section class="levering">
+                    <img class="ur" src="img/infographic/ur.webp" alt="Tegning af et ur">
+                    <p>Levering om 3 dage...</p>
+                </section>
+
+                <section class="levering-dor">
+                    <img class="dor" src="img/infographic/dor.webp" alt="en rød dør med en kasse fra Nippon">
+                    <p>Lige til døren!</p>
+                </section>
+
+                <section class="madlavning">
+                    <img class="pan" src="img/infographic/pan.webp" alt="billede af madlavning">
+                    <p>Lav aftensmad på kun</p>
+                    <p>30 minutter </p>
+                </section>
+
+                <section class="maaltid">
+                    <img class="mad" src="img/infographic/mad.webp" alt="Den færdige ret">
+                    <p>Uhm!</p>
+                    <p>Lækker japansk mad</p>
+                    <p>derhjemme</p>
+                </section>
+
+                <section class="genbrug">
+                    <img class="skraldespande" src="img/infographic/genbrug.webp" alt="skraldespande med genbrugsikon">
+                    <p>Sorter din emballage!</p>
+                </section>
 
         </section>
         
