--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -78,8 +78,92 @@
     <!-- main start -->
     <main>
 
+        <h1>Din måltisdakkse</h1>
+        <h2>Byg selv</h2>
 
-    <img class="n-kontur" src="img/logo/logo_n_kontur-04.webp" alt="">
+
+        <div>
+            <div>
+                <h3>Vælg kassetype</h3>
+                <button>Ugens menu</button>
+                <button>Byg selv</button>
+            </div>
+
+            <div>
+                <h3>Tilpas kassen</h3>
+                <button>
+                    2 personer 
+                    <img src="img/ikoner/pil.webp" alt="">
+                </button>
+                <button>
+                    4 dage 
+                    <img src="img/ikoner/pil.webp" alt="">
+                </button>
+            </div>
+        </div>
+
+        <ol>
+            <li>Byg din egen måltidskasse ved at vælge dine foretrukne retter fra vores udvalg.</li>
+            <li>Tilpas antal dage og personer, så det passer til dine behov.</li>
+            <li>Vælg frit fra de forskellige kasser i vores udvalg ved at trykke på de ønskede retter.</li>
+            <li>Gennemfør bestillingen ved at trykke på "bestil" og se dine valgte retter i kurven.</li>
+        </ol>
+
+        <div>
+            <h2>Ugens udvalg</h2>
+
+            <div>
+                <h3>Yasai kassen</h3>
+
+                <div>
+                    <h4>Okonomiyaki</h4>
+                </div>
+
+                <div>
+                    <h4>Dumplings</h4>
+                </div>
+
+                <div>
+                    <h4>Japansk Curry</h4>
+                </div>
+            </div>
+
+            <div>
+                <h3>Umi kassen</h3>
+                
+                <div>
+                    <h4>Suppe</h4>
+                </div>
+
+                <div>
+                    <h4>Ramen</h4>
+                </div>
+
+                <div>
+                    <h4>Dumplings</h4>
+                </div>
+            </div>
+
+            <div>
+                <h3>Kiso kassen</h3>
+                
+                <div>
+                    <h4>Shoyu Ramen</h4>
+                </div>
+
+                <div>
+                    <h4>Tonkatsu</h4>
+                </div>
+
+                <div>
+                    <h4>Yaki Udon</h4>
+                </div>
+            </div>
+
+            <p>Sampolelt pri 450 DKK</p>
+            <button>Bestil her</button>
+        </div>
+
     </main>
     <!-- main slut -->
 
@@ -92,7 +176,7 @@
         <!-- footer start -->
         <div id="footer">
             <section id="footer-left">
-                <h2>Kundeservice</h2>
+                <h3>Kundeservice</h3>
                 <a href="tel:+4537824691">+45 37 82 46 91</a>
                 <a href="mailto:nippon-info@gmail.com">Nippon-info@gmail.com</a>
             </section>
