--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,7 @@
     <!-- main start -->
     <main>
 
-        <h1>FAQ</h1>
+        <h1 class="h1faq">FAQ</h1>
 
     <!-- Tilføjer boks med FAQ -->
 
