--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -78,7 +78,7 @@
     <!-- main start -->
     <main>
 
-        <h1>Din måltisdakkse</h1>
+        <h1>Din måltidskasse</h1>
         <h2>Byg selv</h2>
 
 
@@ -92,12 +92,10 @@
             <div>
                 <h3>Tilpas kassen</h3>
                 <button>
-                    2 personer 
-                    <img src="img/ikoner/pil.webp" alt="">
+                    2 personer &darr;
                 </button>
                 <button>
-                    4 dage 
-                    <img src="img/ikoner/pil.webp" alt="">
+                    4 dage &darr;
                 </button>
             </div>
         </div>
@@ -109,58 +107,64 @@
             <li>Gennemfør bestillingen ved at trykke på "bestil" og se dine valgte retter i kurven.</li>
         </ol>
 
-        <div>
+        <div class="maltidskasser-boks">
             <h2>Ugens udvalg</h2>
 
-            <div>
+            <div class="maltidskasser">
                 <h3>Yasai kassen</h3>
 
-                <div>
-                    <h4>Okonomiyaki</h4>
-                </div>
+                <div class="kasser">
+                    <div class="ret">
+                        <h4>Okonomiyaki</h4>
+                    </div>
 
-                <div>
-                    <h4>Dumplings</h4>
-                </div>
+                    <div class="ret">
+                        <h4>Dumplings</h4>
+                    </div>
 
-                <div>
-                    <h4>Japansk Curry</h4>
+                    <div class="ret">
+                        <h4>Japansk Curry</h4>
+                    </div>
                 </div>
             </div>
 
-            <div>
+            <div class="maltidskasser">
                 <h3>Umi kassen</h3>
                 
-                <div>
-                    <h4>Suppe</h4>
+                <div class="kasser">
+                    <div class="ret">
+                        <h4>Suppe</h4>
+                    </div>
+
+                    <div class="ret">
+                        <h4>Ramen</h4>
+                    </div>
+
+                    <div class="ret">
+                        <h4>Dumplings</h4>
+                    </div>
                 </div>
 
-                <div>
-                    <h4>Ramen</h4>
-                </div>
-
-                <div>
-                    <h4>Dumplings</h4>
-                </div>
             </div>
 
-            <div>
+            <div class="maltidskasser">
                 <h3>Kiso kassen</h3>
-                
-                <div>
-                    <h4>Shoyu Ramen</h4>
-                </div>
 
-                <div>
-                    <h4>Tonkatsu</h4>
-                </div>
+                <div class="kasser">
+                    <div class="ret">
+                        <h4>Shoyu Ramen</h4>
+                    </div>
 
-                <div>
-                    <h4>Yaki Udon</h4>
+                    <div class="ret">
+                        <h4>Tonkatsu</h4>
+                    </div>
+
+                    <div class="ret">
+                        <h4>Yaki Udon</h4>
+                    </div>
                 </div>
             </div>
-
-            <p>Sampolelt pri 450 DKK</p>
+            <p>Samplet pris 450 DKK</p>
             <button>Bestil her</button>
         </div>
 
