byg selv + yasai

--- a/byg-selv.html
+++ b/byg-selv.html
@@ -82,13 +82,13 @@
         <h2 class="maltidskasseh2">Byg selv</h2>
 
 
-        <div id="maltidknapper">
+        <div class="maltidknapper">
             <div>
                 <h3 class="knapperh3">Vælg kassetype</h3>
                 <button>
                     <p>Ugens menu</p>
                 </button>
-                <button>
+                <button id="activebtn">
                     <p>Byg selv</p>
                 </button>
             </div>
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <ol id="yasai-list">
+        <ol id="byg-selv-list">
             <li>Byg din egen måltidskasse ved at vælge dine foretrukne retter fra vores udvalg.</li>
             <li>Tilpas antal dage og personer, så det passer til dine behov.</li>
             <li>Vælg frit fra de forskellige kasser i vores udvalg ved at trykke på de ønskede retter.</li>
